<resources>
    <string name="app_name">Swol</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter Your Exercise...</string>
    <string name="reps_hint">Reps</string>
    <string name="sets_hint">Sets</string>
    <string name="weight_hint">Weight</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="share_text">Share</string>

    <string name="logo_text">SWOL</string>

    <string name="pref_units_entry_lbs">Lbs</string>
    <string name="pref_units_entry_kgs">Kgs</string>
    <string name="pref_units_val_lbs">lbs</string>
    <string name="pref_units_val_kgs">kgs</string>
    <string name="workouts">Workouts</string>
    <string name="search_exercises">Search Exercises</string>
    <string name="progress">Progress</string>
    <string name="camera">Camera</string>
    <string name="delete_button">Delete Button</string>
</resources>