<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group>
    <item
        android:id="@+id/daily_exercise"
        android:title="@string/workouts"
        android:icon="@drawable/ic_action_today"/>
    <item
        android:id="@+id/exercise_search"
        android:title="@string/search_exercises"
        android:icon="@drawable/ic_action_search"/>
    <item
        android:id="@+id/progress_graph"
        android:title="@string/progress"
        android:icon="@drawable/ic_action_graph"/>
    <item
        android:id="@+id/progress_camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_action_camera"/>
    <item
        android:id="@+id/settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings" />
</group>
</menu>